# radio_tipe_poc

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
esp32-lora-tests/: Cargo.toml
esp32-lora-tests/.cargo/: config.toml
esp32-lora-tests/src/: main.rs
esp32-tipe-client/: Cargo.toml  sdkconfig.defaults
esp32-tipe-client/.cargo/: config.toml
esp32-tipe-client/src/: echo_client.rs  echo_server.rs  main.rs
radio-tipe-poc/: Cargo.toml
radio-tipe-poc/src/: atpc.rs  device.rs  error.rs  lib.rs  radio.rs
radio-tipe-poc/src/device/: atpc.rs  device.rs  frame.rs  mod.rs  radio.rs
radio-tipe-poc/src/socket/: mod.rs
