[workspace]
members = [
    "esp32-lora-tests",
    "esp32-tipe-client",
    "radio-tipe-poc",
]

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
parking_lot = { git = "https://github.com/esp-rs-compat/parking_lot" }
ring = { git = "https://github.com/esp-rs-compat/ring" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
edition = "2021"