[package]
name = "esp32-lora-tests"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2021"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
embedded-svc = "0.21.1"
#esp-idf-svc = "0.41.2"
esp-idf-hal = "0.37.3"
embedded-hal = "0.2"
anyhow = "1"
radio = "0.11.0"
#sx127x_lora = "^0.3"
radio-sx127x = { path = "../rust-radio-sx127x" }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
