[package]
name = "radio-tipe-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
parking_lot = { git = "https://github.com/esp-rs-compat/parking_lot" }
ring = { git = "https://github.com/esp-rs-compat/ring" }

[dependencies]
radio = "0.11.0"
embedded-hal = "0.2"
thiserror = "1"
smol = "1.2"