[package]
name = "radio-tipe-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radio = { path = "../radio-hal" }
embedded-hal = "0.2"
thiserror = "1"
smol = "1.2"
radio-sx127x = { path = "../rust-radio-sx127x" }
serde = { version = "1.0", features = ["derive"] }
log = "*"
ringbuf = "0.3"
lru = "0.10"
getrandom = "0.2.9"